--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,18 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
+  --max-width: 700px;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --border-radius-xsm: 4px;
+  --border-radius-sm: 8px;
+  --border-radius-md: 12px;
+
+  --indentation-xsm: 4px;
+  --indentation-sm: 8px;
+  --indentation-md: 12px;
+  --indentation-lg: 16px;
+
+  --foreground-rgb: rgb(0, 0, 0);
+  --background: rgb(243, 243, 243);
+  --box-color: #00000010;
 
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
@@ -39,9 +47,9 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --foreground-rgb: rgb(255, 255, 255);
+    --background: rgb(33, 33, 33);
+    --box-color: #333333;
 
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
     --secondary-glow: linear-gradient(
@@ -78,24 +86,50 @@
 
 html,
 body {
-  max-width: 100vw;
   overflow-x: hidden;
+  min-height: 100vh;
 }
 
 body {
+  max-width: var(--max-width);
+  margin-left: auto;
+  margin-right: auto;
   color: rgb(var(--foreground-rgb));
-  min-height: 100vh;
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: var(--background);
+  padding: 20px;
+}
+
+p {
+  line-height: 1.6em;
+}
+
+h1 {
+  line-height: 2em;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.external-link {
+  text-decoration: underline;
+}
+
+nav {
+  display: flex;
+  gap: 1em;
+  padding: 1em 0;
+}
+
+.active {
+  background-color: var(--box-color);
+  font-weight: 500;
+}
+
+.link {
+  padding: var(--indentation-sm);
+  border-radius: var(--border-radius-sm);
 }
 
 @media (prefers-color-scheme: dark) {
