--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,72 +9,20 @@
   --indentation-sm: 8px;
   --indentation-md: 12px;
   --indentation-lg: 16px;
+  --indentation-xl: 32px;
 
-  --foreground-rgb: rgb(0, 0, 0);
-  --background: rgb(243, 243, 243);
-  --box-color: #00000010;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  --foreground-rgb: rgb(61, 61, 61);
+  --second-foreground-rgb: rgb(87, 87, 87);
+  --background: rgb(245, 245, 245);
+  --box-color: rgba(232, 232, 232, 0.7);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: rgb(255, 255, 255);
+    --second-foreground-rgb: rgb(169, 169, 169);
     --background: rgb(33, 33, 33);
     --box-color: #333333;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
   }
 }
 
@@ -94,26 +42,17 @@ body {
   max-width: var(--max-width);
   margin-left: auto;
   margin-right: auto;
-  color: rgb(var(--foreground-rgb));
+  color: var(--foreground-rgb);
   background: var(--background);
-  padding: 20px;
+  padding: var(--indentation-xl);
 }
 
 p {
   line-height: 1.6em;
 }
 
-h1 {
-  line-height: 2em;
-}
-
 a {
   color: inherit;
-  text-decoration: none;
-}
-
-.external-link {
-  text-decoration: underline;
 }
 
 nav {
@@ -124,12 +63,50 @@ nav {
 
 .active {
   background-color: var(--box-color);
-  font-weight: 500;
 }
 
 .link {
   padding: var(--indentation-sm);
   border-radius: var(--border-radius-sm);
+  text-decoration: none;
+}
+
+.post {
+  background-color: var(--box-color);
+  padding: var(--indentation-lg);
+  border-radius: var(--border-radius-sm);
+  display: flex;
+  flex-direction: column;
+  gap: var(--indentation-xsm);
+}
+
+.list-item-title {
+  padding-bottom: 0;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: var(--indentation-lg);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  padding-bottom: var(--indentation-lg);
+}
+
+time {
+  font-size: 1em;
+  color: var(--second-foreground-rgb);
+}
+
+.content {
+  padding: var(--indentation-lg) 0 10vw 0;
 }
 
 @media (prefers-color-scheme: dark) {
