--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -137,9 +137,36 @@ nav {
   color: var(--second-foreground-rgb);
   text-decoration: none;
 }
-
 .experience-header {
+  text-decoration: none;
   padding-bottom: var(--indentation-md);
+}
+
+.experience-header:hover .project-label::before {
+  transform-origin: left;
+  transform: scaleX(1);
+}
+
+.experience-header .project-label {
+  position: relative;
+}
+
+.experience-header .project-label::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  border-radius: 2px;
+  background-color: var(--yellow);
+  bottom: 0;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
+}
+
+#projects .project-label:hover {
+  opacity: 0.8;
 }
 
 .contact-icons {
